[project]
name = "vscode"
description = "一个重新定义并优化的代码编辑器，专为构建和调试现代网络和云应用程序而设计。"
authors = [{name= "Dave", email = "pengbo@featurize.ai"}]
version = "1.0.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/pengbo0054/featurize-codeserver"
Documentation = "https://github.com/pengbo0054/featurize-codeserver/blob/main/README.md"
Repository = "https://github.com/pengbo0054/featurize-codeserver"
Changelog = "https://github.com/pengbo0054/featurize-codeserver/blob/main/CHANGELOG.md"
Issues = "https://github.com/pengbo0054/featurize-codeserver/issues"

[featurize]
port = "26285"
op_port = "37932"
icon = "https://featurize-public.oss-cn-beijing.aliyuncs.com/channels4_profile.jpg"
author_github = "https://github.com/pengbo0054"
name = "VSCode"
newtab = false